# conway

./: Cargo.toml  build  index.html  server.go  setup
src/: lib.rs
tests/: web.rs
