[package]
name = "wasm-mdn"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Window", "Performance"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# debug = true
lto = true
opt-level = "s"
